--- a/app/javascript/packs/src/application.scss
+++ b/app/javascript/packs/src/application.scss
@@ -3,3 +3,13 @@
 td.struck{
   text-decoration: line-through;
 }
+td.eliminated{
+  background-color: pink;
+}
+td.alive{
+  background-color: green;
+}
+td.dead{
+  background-color: black;
+  color: red;
+}
