--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -2,18 +2,21 @@
   %thead
     %tr
       %th Team
-      - (1..16).each do |week|
+      - (1..11).each do |week|
         %th= week
   %tbody
     - @teams.each do |team|
       %tr{align: 'left'}
-        %td= team.name
-        - team.weeks.each do |week|
+        - if team.eliminated?
+          %td.dead= team.name
+        - else
+          %td.alive= team.name
+        - team.weeks.limit(11).each do |week|
           - if team.eliminated_week == week.week_num
-            %td{class: "struck"}= week.points
+            %td{class: "struck eliminated"}= week.points
           - elsif team.eliminated? && team.eliminated_week > week.week_num
             %td= week.points
           - elsif team.eliminated? && team.eliminated_week < week.week_num
-            %td -
+            %td.eliminated -
           - else
             %td= week.points
